SERVER-46932 supress more logging in the shell